[package]
name = "binviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.83"
clap = "4.4.7"
clap_derive = "4.4.7"
comfy-table = "7.1.0"
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"

[lib]

[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
